--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,8 @@
   <version>1.0-SNAPSHOT</version>
   <name>detourdetective</name>
   <url>http://maven.apache.org</url>
-  <properties>
-     <maven.compiler.source>1.8</maven.compiler.source>
-     <maven.compiler.target>1.8</maven.compiler.target>
-</properties>
+
+
 
   <dependencies>
     <dependency>
@@ -19,5 +17,31 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- Hibernate ORM -->
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.4.2.Final</version>
+    </dependency>
+
+    <!-- PostgreSQL Connector -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.3.1</version>
+    </dependency>
   </dependencies>
+  <build>
+    <sourceDirectory>src/main/java</sourceDirectory>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
