--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,11 @@
 			<artifactId>GeographicLib-Java</artifactId>
 			<version>2.0</version>
 		</dependency>
-
+<dependency>
+    <groupId>commons-cli</groupId>
+    <artifactId>commons-cli</artifactId>
+    <version>1.6.0</version>
+</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
